test/files/pos/bug3175.scala
object Test {
  def f(g:{val update:Unit}) = g.update

  def main(args: Array[String]): Unit = {

  }
}
